# django-htmx-cbv

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_htmx_cbv/: apps.py  checks.py  forms.py  future.py  middleware.py  views.py
django_htmx_cbvs/: middleware.py
tests/project/: test_forms_views.py  test_middleware.py
tests/project/app/: views.py
tests/project/project/: settings.py  urls.py
tests/project/templates/: messages.html  page.html
