[project]
name = "django-htmx-cbv"
version = "0.0.1.dev1"
description = "Django class-based views, tailored for htmx"
authors = [
    {name = "Geoffrey Eisenbarth",email = "geoffrey.eisenbarth@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.0,<7.0.0)",
    "django-htmx (>=1.27.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "ipython (>=9.12.0,<10.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-type-checking (>=3.2.0,<4.0.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "django-stubs (>=6.0.2,<7.0.0)",
    "django-stubs-ext (>=6.0.2,<7.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "codecov (>=2.1.13,<3.0.0)",
    "parameterized (>=0.9.0,<0.10.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
pythonpath = ["tests/project"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = true
packages = ["django_htmx_cbv", "tests"]
exclude = [
  "future.py",
  "tests/project/manage.py",
  "tests/project/project",
]

[tool.django-stubs]
django_settings_module = "tests.project.project.settings"
